--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h2>🛠️ My Tech Stack</h2>
         <div class="tech-stack">
             <a href="https://skillicons.dev"><img src="https://skillicons.dev/icons?i=html,css" alt="HTML, CSS"/></a>
-            <a href="https://skillicons.dev"><img src="https://skillicons.dev/icons?i=nodejs,python,java,php,c,cs" alt="Backend languages"/></a>
+            <a href="https://skillicons.dev"><img src="https://skillicons.dev/icons?i=nodejs,python,java,php,c, с++,cs" alt="Backend languages"/></a>
             <a href="https://skillicons.dev"><img src="https://skillicons.dev/icons?i=mysql,postgres,git" alt="Database and tools"/></a>
         </div>
 
@@ -110,12 +110,15 @@
 
         <h2>🔗 Connect with me</h2>
         <div class="connect-container">
-            <a href="https://linkedin.com/in/YOUR_LINKEDIN_PROFILE"><img src="https://img.shields.io/badge/LinkedIn-0A66C2?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn"/></a>
-            <a href="https://twitter.com/YOUR_TWITTER_HANDLE"><img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white" alt="Twitter"/></a>
+            <a href="https://linkedin.com/in/cryhaze2k"><img src="https://img.shields.io/badge/LinkedIn-0A66C2?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn"/></a>
+            <a href="https://twitter.com/cryhaze2k"><img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white" alt="Twitter"/></a>
             <a href="mailto:cryhaze2k@gmail.com"><img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="Email"/></a>
         </div>
 
-        <img class="footer-img" src="https://raw.githubusercontent.com/gist/sebastiansandqvist/c6f555d7759a527c8afa3c2c77d4c2b2/raw/e93233a76986c75771b3e8c1878f8d68f2b7f24d/bottom.svg" alt="Footer decoration">
+        <picture>
+  <source media="(prefers-color-scheme: dark)" srcset="github-snake-dark.svg" />
+  <img alt="github-snake" src="github-snake.svg" />
+</picture>
     </div>
 
 </body>
