--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h2>🛠️ My Tech Stack</h2>
         <div class="tech-stack">
             <a href="https://skillicons.dev"><img src="https://skillicons.dev/icons?i=html,css" alt="HTML, CSS"/></a>
-            <a href="https://skillicons.dev"><img src="https://skillicons.dev/icons?i=nodejs,python,java,php,c, с++,cs" alt="Backend languages"/></a>
+            <a href="https://skillicons.dev"><img src="https://skillicons.dev/icons?i=nodejs,python,java,php,c,cpp,cs" alt="Backend languages"/></a>
             <a href="https://skillicons.dev"><img src="https://skillicons.dev/icons?i=mysql,postgres,git" alt="Database and tools"/></a>
         </div>
 
@@ -116,10 +116,21 @@
         </div>
 
         <picture>
-  <source media="(prefers-color-scheme: dark)" srcset="github-snake-dark.svg" />
-  <img alt="github-snake" src="github-snake.svg" />
-</picture>
-    </div>
+          <source 
+            media="(prefers-color-scheme: dark)" 
+            srcset="https://raw.githubusercontent.com/cryhaze2k/cryhaze2k/output/github-snake-dark.svg"
+          />
+          <source 
+            media="(prefers-color-scheme: light)" 
+            srcset="https://raw.githubusercontent.com/cryhaze2k/cryhaze2k/output/github-snake.svg"
+          />
+          <img 
+            alt="github-snake" 
+            src="https://raw.githubusercontent.com/cryhaze2k/cryhaze2k/output/github-snake.svg"
+            class="footer-img"
+          />
+        </picture>
+        </div>
 
 </body>
 </html>
